chore: update package json
[desc] N/A
[ticket] N/A

--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "code-base-electron",
   "description": "A modular and maintainable codebase for an Electron application built with React, featuring a clean folder structure, reusable components, and efficient state management for desktop environments",
+  "version": "0.0.1",
   "license": "MIT",
+  "main": "./.erb/dll/main.bundle.dev.js",
   "author": {
     "name": "Harry",
     "email": "harrydng1209@gmail.com",
     "url": "https://github.com/harrydng1209"
   },
-  "main": "./.erb/dll/main.bundle.dev.js",
+  "devEngines": {
+    "node": ">=20.x",
+    "npm": ">=10.x"
+  },
   "scripts": {
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
     "build:dll": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts",
@@ -166,10 +171,6 @@
       "owner": "electron-react-boilerplate",
       "repo": "electron-react-boilerplate"
     }
-  },
-  "devEngines": {
-    "node": ">=20.x",
-    "npm": ">=10.x"
   },
   "electronmon": {
     "patterns": [
